[package]
name = "word-search"
version = "1.0.0"
authors = ["ISSOtm <me@eldred.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aho-corasick = "0.7"
# TODO: these are only needed for the binary target
atty = "0.2"
clap = "3.0.0-beta.2"
termcolor = "1.1"
